# nixos-installer-gui

./: CMakeLists.txt  README.md  shell.nix
forms/: main_window.ui  storage_widget.ui
include/forms/: main_window.hpp  storage_widget.hpp
source/: main.cpp
source/forms/: main_window.cpp  storage_widget.cpp
